z-index issue fixed

--- a/src/app/chat/components/chat-list/chat-list.component.css
+++ b/src/app/chat/components/chat-list/chat-list.component.css
@@ -69,7 +69,7 @@ color: #bbbbbb;
   height: 49px;
   box-sizing: border-box;
   position: relative;
-  z-index: 100;
+  z-index: 0;
   transition: box-shadow 0.18s ease-out, background-color 0.18s ease-out;
 }
 .searchInput {
